--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <header>
-    <h1>SDI TERMNUMBER: FULL NAME</h1>
+    <h1>SDI 1210: Greg Armstrong</h1>
     <h2>Project 2</h2>
 </header>
 <article>
