added math function fixed HTML file

--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -16,7 +16,7 @@
 <p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
 </article>
 <footer>
-    <p>COMPLETION DATE, FULL NAME</p>
+    <p>10-04-12, Greg Armstrong</p>
 </footer>
 <script type="text/javascript" src="Armstrong_Greg_Project2.js"></script>
 </body>
