--- a/sdi-project2.html
+++ b/sdi-project2.html
@@ -11,9 +11,9 @@
     <h2>Project 2</h2>
 </header>
 <article>
-<p>In this space you should provide a short (one paragraph) explanation of your theme and why you chose it.</p>
-<p>You may also use this space to explain any elements of your code story that may not be entirely clear.  For example, if your theme is thirteenth century Italian poetry, not everyone may be familiar with that.</p>
-<p>Don't forget to replace all of the capitalized elements in this template with your information.  Your term number should be in a <em>yymm</em> format, including the year and the month.</p>
+<p>I continued my theme on Zombies mainly because its easier for me to continue the ideas for this then try to make a whole new story in a short amount of time.</p>
+<p>I had some issues with the project getting the returns to work correctly with each type of function wasn't working to well for me and I know I didn't do everything correctly which is my fault for putting the majority of this project off until the last minute but life doesn't always give you the time you need.</p>
+
 </article>
 <footer>
     <p>10-04-12, Greg Armstrong</p>
