--- a/additem.html
+++ b/additem.html
@@ -14,23 +14,21 @@
 	<h1>Video Games</h1>
 	
 	<!-- form -->
-	<form action="#" method="post">
+	<form action="#" method="post" id="preorderList">
 		<fieldset>
 			<legend>Add New Game</legend>
 			<ul>
 				<li><label for="title">Title</label><br>
 				<input type="text" class="large" name="title" id="title" />
-				<li><label for="system">System</label><br>
-				<input type="text" class="large" name="system" id="system" />
+				<li id="select"><label for="system">Choose System</label><br /></li>
 				<li><label for="date">Release Date</label><br>
-				<input type="date" value="2012-11-6" />
-				<li><label for="age">Age Range</label><br>
-				<input type="range" name="Age" min="0" max="18+" step="5" value="17+" />
-				<li><label for="bonus">Pre-Order Bonus?</label><br>
-				<input type="checkbox" checked value="yes" id="yes" />
+				<input type="date" value="2012-11-6" id="releaseDate"/>
+				<li><label for="age">Rating</label><br>
+				<input type="range" name="Age" min="0" max="10" step="1" value="5"     id="rating"/>
+				<li><label for="bonus">Has Pre-Order Bonus?</label><br>
+				<input type="checkbox" id="bonus" value="yes"/>
 				<label for="yes">Yes</label>				
-				<input type="checkbox" value="no" id="no" />
-				<label for="no">No</label>
+			
 				<li><label for="coments">Pre-Order Bonuses</label><br>
 				<textarea id="comments"></textarea></li>
 				
@@ -41,11 +39,11 @@
 		</fieldset>
 	</form>
 	
-	<a href="#" id="view_preorders" class="btn primary">View Game Pre-Orders</a>
-	<a href="#" id="clear_comics" class="btn clear">Clear Stored Data</a>
+	<a href="#" id="viewPreorders" class="btn primary">View Game Pre-Orders</a>
+	<a href="#" id="clear" class="btn clear">Clear Stored Data</a>
+	<a href="additem.html" id="addNew" style="display:none;">Add New game</a>
 
 
-
-
+	<script src="main.js" type="text/javascript"></script>
 </body
 </html>
