--- a/additem.html
+++ b/additem.html
@@ -7,11 +7,12 @@
 		<meta name="keywords" content="xbox, PS3, WiiU, pre-order, new release" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<link href="style.css" rel="stylesheet" />
 		<title>Reserved Upcoming Games</title>
 	</head>
 <body>
 	<!-- Content -->
-	<h1>Video Games</h1>
+	<h1>Upcoming New Releases</h1>
 	
 	<!-- form -->
 	<form action="#" method="post" id="preorderList">
