--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<meta name="keywords" content="xbox, PS3, WiiU, pre-order, new release" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
+		<link href="style.css" rel="stylesheet" />
 		<title>Reserved Upcoming Games</title>
 	</head>
 	<body>
