--- a/additem.html
+++ b/additem.html
@@ -18,6 +18,8 @@
 	<form action="#" method="post" id="preorderList">
 		<fieldset>
 			<legend>Add New Game</legend>
+			<span>* fields are required</span>
+			<ul id="errors"></ul>
 			<ul>
 				<li><label for="title">Title</label><br>
 				<input type="text" class="large" name="title" id="title" />
