--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<meta name="keywords" content="xbox, PS3, WiiU, pre-order, new release" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
-		<link href="style.css" rel="stylesheet" />
+		<link href="css/style.css" rel="stylesheet" />
 		<title>Reserved Upcoming Games</title>
 	</head>
 	<body>
-		<p>An app that lists upcoming games that you have pre-ordered</P>
+		<p1>An app that lists upcoming games that you have pre-ordered</P>
 		<h1>Get Started Now</h1>
 		<a href=additem.html>Add Games Here</A>
 	</body>
