--- a/additem.html
+++ b/additem.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="xbox, PS3, WiiU, pre-order, new release" />
 		<meta name="robots" content="index, follow" />
 		<meta name="viewport" content="user-scalable=no, width=device-width" />
-		<link href="style.css" rel="stylesheet" />
+		<link href="css/style.css" rel="stylesheet" />
 		<title>Reserved Upcoming Games</title>
 	</head>
 <body>
@@ -21,9 +21,9 @@
 			<span>* fields are required</span>
 			<ul id="errors"></ul>
 			<ul>
-				<li><label for="title">Title</label><br>
+				<li><label for="title">Title*</label><br>
 				<input type="text" class="large" name="title" id="title" />
-				<li id="select"><label for="system">Choose System</label><br /></li>
+				<li id="select"><label for="system">Choose System*</label><br /></li>
 				<li><label for="date">Release Date</label><br>
 				<input type="date" value="2012-11-6" id="releaseDate"/>
 				<li><label for="age">Rating</label><br>
@@ -46,7 +46,7 @@
 	<a href="#" id="clear" class="btn clear">Clear Stored Data</a>
 	<a href="additem.html" id="addNew" style="display:none;">Add New game</a>
 
-
-	<script src="main.js" type="text/javascript"></script>
+	<script src="js/json.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </body
 </html>
